Aligned the text, button and icon correctly to make the ui better using flex and it's properties

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -19,7 +20,11 @@ body {
   background: white;
   width: 480px;
   border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, .2);
+  display: flex;
+  gap:20px;
+  padding:20px;
+  
 }
 
 .icon {
@@ -33,13 +38,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
   background: #eee;
   border-radius: 50%;
-  color: #888;
-  font-weight: 400;
+  color: #6b6969;
+  font-weight: 600;
   font-size: 16px;
   height: 24px;
   width: 24px;
@@ -54,6 +60,7 @@ button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+
 }
 
 button.continue {
@@ -66,4 +73,27 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.container {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+ 
+}
+.header {
+  font-weight: bold;
+  font-size: 20px;
+}
+.head1 {
+  display: flex;
+  justify-content: space-between;
+}
+.btn {
+  display: flex;
+  gap: 15px;
+  margin-top: 15px;
+}
+.text {
+  margin: 8px 2px;
 }
